<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context=".ui.lapor.ReportActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pb_send_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/img_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_photo"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/img_report"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_image_not_supported_24"
                    tools:ignore="ContentDescription" />

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/ic_retake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@drawable/ic_retake"
                android:translationZ="90dp"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/judul"
            android:textColor="@color/grey_500"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_photo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_title_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_rounded_edittext"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="Masukkan judul laporan"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/grey_500"
            android:textColorHint="@color/grey_200"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Nomor Telepon"
            android:textColor="@color/grey_500"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_title_edt" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_phone_edt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_rounded_edittext"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:hint="Masukkan nomor yang dapat dihubungi"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/grey_500"
            android:textColorHint="@color/grey_200"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/deskripsi"
            android:textColor="@color/grey_500"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_phone_edt" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_rounded_edittext"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:gravity="top|start"
            android:hint="Masukkan rincian dan lokasi laporan"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="5"
            android:overScrollMode="always"
            android:padding="10dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_500"
            android:textColorHint="@color/grey_200"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/desc" />

        <Button
            android:id="@+id/kirim"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_rectangle_red"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/kirim"
            app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edReview" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_light"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/batalkan_laporan"
            android:textColor="@color/grey_200"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/kirim"
            app:layout_constraintStart_toStartOf="@id/kirim"
            app:layout_constraintTop_toBottomOf="@id/kirim" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>